PROJECT(TODOP)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

ADD_SUBDIRECTORY(src)

MESSAGE(STATUS "This is BINARY dir:" ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir:" ${PROJECT_SOURCE_DIR})

ADD_DEFINITIONS(-D_UNICODE -DUNICODE -DWIN32 -D_WINDOWS -DWINDOWS -D_DEBUG -DDEBUG -DLITEHTML_UTF8)
