SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src SRC_LIST)

INCLUDE_DIRECTORIES("C:/apps/duilib/DuiLib")
INCLUDE_DIRECTORIES("C:/OpenSSL-Win64/include")
INCLUDE_DIRECTORIES("C:/apps/websocketpp")
INCLUDE_DIRECTORIES("C:/apps/boost_1_65_1")

LINK_DIRECTORIES("C:/apps/duilib/lib")
LINK_DIRECTORIES("C:/apps/boost_1_65_1/lib64-msvc-14.0")

IF(WIN32)
    SET(CMAKE_CXX_STANDARD 11)
	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -SUBSYSTEM:WINDOWS")
    MESSAGE(STATUS "CMAKE_EXE_LINKER_FLAGS:" ${CMAKE_EXE_LINKER_FLAGS})
ENDIF(WIN32)

ADD_EXECUTABLE(TODOP WIN32 ${SRC_LIST})

TARGET_LINK_LIBRARIES(TODOP DuiLib)
