SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src SRC_LIST)

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/third_party/duilib/DuiLib")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/third_party/OpenSSL/include")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/third_party/websocketpp")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/third_party/boost_1_65_1")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/third_party/zint-2.4.2/backend")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/third_party/dukglue/include")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/third_party/litehtml/include")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/third_party/litehtml/containers")

LINK_DIRECTORIES("${PROJECT_SOURCE_DIR}/third_party/duilib/lib64")
LINK_DIRECTORIES("${PROJECT_SOURCE_DIR}/third_party/boost_1_65_1/lib64")
LINK_DIRECTORIES("${PROJECT_SOURCE_DIR}/third_party/zint-2.4.2/lib64")
LINK_DIRECTORIES("${PROJECT_SOURCE_DIR}/third_party/litehtml/lib64")

IF(WIN32)
    SET(CMAKE_CXX_STANDARD 11)
	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -SUBSYSTEM:WINDOWS")
    MESSAGE(STATUS "CMAKE_EXE_LINKER_FLAGS:" ${CMAKE_EXE_LINKER_FLAGS})
ENDIF(WIN32)

ADD_EXECUTABLE(TODOP WIN32 ${SRC_LIST})

TARGET_LINK_LIBRARIES(TODOP DuiLib)
